--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* var(--pink, #F6299F);
+var(--red, #fc094e);
+var(--blue, #2CB3AC);
+var(--purple, #7036aa);
+var(--dark, #22031f); */
