--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,23 +1,83 @@
+/*About page*/
+nav{
+    position: absolute;
+}
 .container{
     margin: 0;
     padding: 0;
 }
+.container-1, .container-2, .container-3, .container-4, .container-5 {
+    width: 120%;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
 .container-1{
-    max-width: 100%;
-    height: 500px;
+    margin: 0;
+    padding: 0;
 }
-.container-2{
-    width: auto;
-    height: 500px;
+.container-2, .container-4{
+    background-color: rgb(48, 57, 66);
 }
-.container-3{
-    width: auto;
-    height: 500px;
+.container-3, .container-5{
+    background-color: rgb(27, 33, 39);
 }
-.container-4{
-    width: auto;
-    height: 500px;
-}.container-5{
-    width: auto;
-    height: 500px;
+.content1, .content3, .content4, .content5 {
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 20% 0 20%;
+}
+#content2{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-left: 5%;
+}
+#content2a{
+    width: 50%;
+    padding: 10%;
+}
+#content2b{
+    width: 50%;
+    display: inline-flex;
+    flex-wrap:wrap;
+    align-content: center;
+}
+#imgRow{
+    display: block;
+}
+#img1, #img2{
+    width: 15em;
+    height: auto;
+}
+#img3{
+    width: 30em;
+    height: 15em;
+}
+
+/*images & text responsive*/
+@media (min-width: 650px ) {
+    .container-1, .container-2, .container-3, .container-4, .container-5 {
+        background-position: center center;
+    }
+
+    .content1, .content2, .content3, .content4, .content5 {
+        align-items: center;
+        justify-content: center;
+    }
+}
+/*text in containers 1 to 5*/
+h4{
+    color: white;
+    font-size: 2.5em;
+    margin-bottom: 0.7em;
+    
+}
+p{
+    color: white;
 }
