--- a/src/components/About.css
+++ b/src/components/About.css
@@ -49,15 +49,19 @@ nav{
     align-content: center;
 }
 #imgRow{
-    display: block;
+    display: flex;
+}
+#imgRow2{
+    width: 100%;
+    height: 50%;
 }
 #img1, #img2{
-    width: 15em;
+    width: 50%;
     height: auto;
 }
 #img3{
-    width: 30em;
-    height: 15em;
+    width: 100%;
+    height: auto;
 }
 
 /*images & text responsive*/
