--- a/src/css/AttractionDiv.css
+++ b/src/css/AttractionDiv.css
@@ -1,3 +1,8 @@
+.categoriesSec{
+    background-color: white;
+}
+
+
 .attractionCard{
     min-height: 400px;
     display: flex;
@@ -22,7 +27,6 @@
 }
 
 .col-md-6.col-sm-12{
-    color: white;
     padding-left: 0px;
     padding-right: 0px;
 }
