--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,10 +1,10 @@
 /*About page*/
 nav{
-    position: absolute;
+    position: absolute !important; 
 }
 .container{
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 .container-1, .container-2, .container-3, .container-4, .container-5 {
     width: 120%;
@@ -23,7 +23,7 @@ nav{
 .container-3, .container-5{
     background-color: rgb(27, 33, 39);
 }
-.content1, .content3, .content4, .content5 {
+.content1, .content4, .content5 {
     height: 70%;
     display: flex;
     flex-direction: column;
@@ -36,7 +36,7 @@ nav{
     height: 100%;
     display: flex;
     flex-direction: row;
-    margin-left: 5%;
+    align-content: center;
 }
 #content2a{
     width: 50%;
@@ -50,10 +50,12 @@ nav{
 }
 #imgRow{
     display: flex;
+    width: 70%;
 }
 #imgRow2{
-    width: 100%;
-    height: 50%;
+    width: 70%;
+    height: 25%;
+    overflow: hidden;
 }
 #img1, #img2{
     width: 50%;
@@ -63,16 +65,31 @@ nav{
     width: 100%;
     height: auto;
 }
-
+#content3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:flex-start;
+    margin: 0 20% 0 20%;
+}
+#cont3h4{
+    margin-top: 5%;
+}
+#p3{
+    margin-top: 2%;
+}
 /*images & text responsive*/
 @media (min-width: 650px ) {
     .container-1, .container-2, .container-3, .container-4, .container-5 {
         background-position: center center;
     }
 
-    .content1, .content2, .content3, .content4, .content5 {
+    .content1, .content2, .content4, .content5 {
         align-items: center;
         justify-content: center;
+    }
+    #content3 {
+        align-items: center;
     }
 }
 /*text in containers 1 to 5*/
@@ -82,6 +99,70 @@ h4{
     margin-bottom: 0.7em;
     
 }
+h5{
+    color: white;
+}
 p{
     color: white;
 }
+#picDiv{
+    width: 10em;
+    align-items: center;
+    vertical-align: middle;
+    display: flex;
+    border-radius: 50%;
+}
+#teamPic{
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+}
+h5{
+    margin-top: 10% !important;
+    font-size:1em !important;
+}
+#teamSocial{
+    margin-top: 7%;
+    width: 2em;
+    color: white;
+}
+#teaMember{
+    width: 100%;
+    padding: 0;
+}
+#team{
+    margin-top: 5%;
+}
+#buttonTeam{
+    margin-top: 5%;
+    text-align: center;
+}
+
+/*button*/
+.button {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 9em;
+    height: auto;
+    margin: 0px 0px 0px 0px;
+    padding: 6px 0px 6px 0px;
+    background: rgba(155, 155, 155, 0.3);
+    border-radius: 25px;
+    border-style: none;
+    box-shadow:  0px 0px 5px 3px rgba(0, 0, 0, 0.03);
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .button .part-text .label {
+    box-sizing: border-box;
+    font-family: ui-monospace;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 153%;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+    letter-spacing: -0.01em;
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+  }
