--- a/src/components/About.css
+++ b/src/components/About.css
@@ -6,7 +6,7 @@ nav{
     margin: 0 !important;
     padding: 0 !important;
 }
-.container-1, .container-2, .container-3, .container-4, .container-5 {
+.container-1, .container-2, .container-3, .container-5 {
     width: 120%;
     height: 100vh;
     background-size: cover;
@@ -17,13 +17,20 @@ nav{
     margin: 0;
     padding: 0;
 }
+.container-4{
+    width: 120%;
+    height: 150vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
 .container-2, .container-4{
     background-color: rgb(48, 57, 66);
 }
 .container-3, .container-5{
     background-color: rgb(27, 33, 39);
 }
-.content1, .content4, .content5 {
+.content1, #content4, .content5 {
     height: 70%;
     display: flex;
     flex-direction: column;
@@ -72,8 +79,8 @@ nav{
     justify-content:flex-start;
     margin: 0 20% 0 20%;
 }
-#cont3h4{
-    margin-top: 5%;
+#cont3h4 {
+    margin-top: 40px;
 }
 #p3{
     margin-top: 2%;
@@ -84,7 +91,7 @@ nav{
         background-position: center center;
     }
 
-    .content1, .content2, .content4, .content5 {
+    .content1, .content2, #content4, .content5 {
         align-items: center;
         justify-content: center;
     }
@@ -134,7 +141,7 @@ h5{
     margin-top: 5%;
 }
 #buttonTeam{
-    margin-top: 5%;
+    margin-top: 50px;
     text-align: center;
 }
 
@@ -166,3 +173,11 @@ h5{
     padding: 0;
     margin: 0;
   }
+  #content4 {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 20% 0 20%;
+}
