--- a/src/components/About.css
+++ b/src/components/About.css
@@ -23,6 +23,7 @@ nav{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
+
 }
 .container-2, .container-4{
     background-color: rgb(48, 57, 66);
@@ -134,7 +135,7 @@ h5{
     color: white;
 }
 #teaMember{
-    width: 100%;
+    /* width: 100%; */
     padding: 0;
 }
 #team{
@@ -180,4 +181,59 @@ h5{
     align-items: center;
     justify-content: center;
     margin: 0 20% 0 20%;
+}
+/*grid pictures "our picks" */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 15px;
+    
+}
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery__item--1 {
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+.gallery__item--2 {
+    grid-column-start: 6;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+.gallery__item--3 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 6;
+}
+.gallery__item--4 {
+    grid-column-start: 3;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 6;
+}
+.gallery__item--5 {
+    grid-column-start: 6;
+    grid-column-end: 9;
+    grid-row-start: 2;
+    grid-row-end: 6;
+}
+.gallery__item--6 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 6;
+    grid-row-end: 9;
+}
+.gallery__item--7 {
+    grid-column-start: 3;
+    grid-column-end: 9;
+    grid-row-start: 6;
+    grid-row-end: 9;
 }
