push changes for nav, footer, and signin

--- a/src/index.css
+++ b/src/index.css
@@ -158,3 +158,25 @@ label {
   transform: translateY(100px) scale(0) rotateY(180deg);
   opacity: 0;
 }
+.categoryChoice{
+
+  font-size: 2rem;
+  padding: 15px 20px;
+  list-style: none;
+  background-color: #9a04ff;
+  color: #fff;
+  margin: 2px;
+  /* display: flex; */
+  /* align-items: center; */
+  justify-content: flex-start;
+  /* cursor: move; */
+  column-count: 6;
+  column-gap: 10px;
+
+ 
+}
+
+.catOne {
+  display: flex;
+
+}
