--- a/src/index.css
+++ b/src/index.css
@@ -40,13 +40,23 @@ p{
   position: relative;
   top: 0.9px;
 }
-.navbar {
+/* .navbar {
   position: absolute;
   background-color: #24252A;
   width: 100%;
   height: 60px;
   left: 0px;
   top: 0px;
+} */
+.brand-logo{
+  text-decoration: none;
+}
+.nav-wrapper{
+align-items: center;}
+.navbar-toggler{
+  align-items: center;
+  float: right;
+  color: white;
 }
 
 .loginicon {
