--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,7 +1,7 @@
 /* About page */
-nav{
+/* nav{
     position: absolute !important; 
-}
+} */
 #container{
     margin: 0 !important;
     padding: 0 !important;
