--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,13 @@ p{
 }
 
 .carouselDown{
+  z-index: 0;
   position: relative;
   top: 0.9px;
 }
 .navbar {
   position: absolute;
-  background-color: #24252A;
+  background-color: #f9f9fd;
   width: 100%;
   height: 60px;
   left: 0px;
@@ -76,6 +77,8 @@ p{
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  position:absolute;
+  z-index: 1;
 }
 
 .form-box{
