--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,8 @@ p{
   text-decoration: none;
 }
 .nav-wrapper{
-align-items: center;}
+align-items: center;
+}
 .navbar-toggler{
   align-items: center;
   float: right;
