--- a/src/components/About.css
+++ b/src/components/About.css
@@ -31,7 +31,7 @@
 }
 .container-5 {
     width: 120%;
-    height: 100vh;
+    height: 120vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
@@ -169,7 +169,7 @@ p{
     height: 10em;
 }
 #teamSocial{
-    margin-top: 7%;
+    margin: 7% 3% 0 3%;
     width: 2em;
     color: white;
 }
@@ -285,29 +285,48 @@ p{
 }
 .card-body{
     background-color: rgb(22, 123, 163);
+    /* height: 200%; */
 }
 .card-title{
-    color: white;
     font-size: 15px !important;
+    /* height: 100%; */
 }
-p.card-title{
-    text-decoration: none;
+.news{
+    height: 100%;
 }
 
 /* make page responsive*/
 
 /* Landscape tablets and medium desktops */
 @media (min-width: 992px) {
-
+    .container-5 {
+        height: 140vh;
+    }
+    .card{
+        width:90%;
+        height: 100%;
+    }
+    .container-5b{
+        margin: 2% 0 0.5% 2%;
+    }
+    #column{
+        margin-bottom: 2%;
+    }
 }
 
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 991px) {
-
+    .container-5 {
+        height: 130vh;
+    }
+    .card{
+        width:90%;
+        margin: 5% 5% 5% 5%;
+    }
 }
 
 /* Landscape phones and portrait tablets */
-@media (max-width: 767px) {
+@media (min-width: 576px) and (max-width: 767px) {
     #teaMember{
         padding: 0;
         display: inline-flex;
@@ -337,7 +356,6 @@ p.card-title{
         vertical-align: middle;
         margin-left: 5%;
         align-items: center;
-        
     }
     .container-3{
         height: 190vh;
@@ -345,5 +363,35 @@ p.card-title{
     #buttonTeam{
         margin-top: 0px;
         text-align: center;
+    }
+    .container-5 {
+        height: 250vh;
+    }
+    #column{
+        margin-bottom: 10px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+    }
+    .card{
+        width:90%;
+        height: 100%;
+    }
+}
+
+/* Extra small devices (phones, 575px and down) */
+@media (max-width: 575px) {
+    .container-5 {
+        height: 590vh;
+    }
+    .card{
+        width:70%;
+        height: 100%;
+    }
+    #column{
+        margin-bottom: 10px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
     }
 }
