--- a/src/components/About.css
+++ b/src/components/About.css
@@ -169,8 +169,13 @@ p{
 }
 #teamSocial{
     margin: 7% 3% 0 3%;
-    width: 2em;
+    width: 1em;
+}
+#piCont{
     color: white;
+}
+i{
+    width: 50px;
 }
 #teaMember{
     /* width: 100%; */
@@ -276,7 +281,7 @@ p{
     grid-row-end: 9;
 }
 
-/*news Api component*/
+            /* local news API - container 5 */
 
 .card{
     width: 100%;
@@ -294,10 +299,11 @@ p{
     height: 100%;
 }
 
-/* make page responsive*/
+                /* make page responsive*/
 
 /* Landscape tablets and medium desktops */
 @media (min-width: 992px) {
+    /*container 5*/
     .container-5 {
         height: 140vh;
     }
@@ -307,15 +313,20 @@ p{
     }
     .container-5b{
         margin: 2% 0 2% 2%;
-        
     }
+
+    /*container 3*/
     #column{
         margin-bottom: 2%;
+    }
+    #buttonTeam{
+        margin-top: 3%;
     }
 }
 
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 991px) {
+    /*container 5*/
     .container-5 {
         height: 130vh;
     }
@@ -323,10 +334,16 @@ p{
         width:90%;
         margin: 5% 5% 5% 5%;
     }
+
+    /*container 3*/
+    .container-3{
+        height: 95vh;
+    }
 }
 
 /* Landscape phones and portrait tablets */
 @media (min-width: 576px) and (max-width: 767px) {
+    /*container 3*/
     #teaMember{
         padding: 0;
         display: inline-flex;
@@ -358,12 +375,14 @@ p{
         align-items: center;
     }
     .container-3{
-        height: 190vh;
+        height: 185vh;
     }
     #buttonTeam{
         margin-top: 0px;
         text-align: center;
     }
+
+    /*container 5*/
     .container-5 {
         height: 250vh;
     }
@@ -381,6 +400,46 @@ p{
 
 /* Extra small devices (phones, 575px and down) */
 @media (max-width: 575px) {
+    /*container 3*/
+    #teaMember{
+        padding: 0;
+        display: block;
+        vertical-align: middle;
+    }
+    #teamPic{
+        vertical-align: middle;
+        width: 15em;
+        height: 15em;
+    }
+    h5{
+        color: white;
+        font-size:1.5em !important;
+        margin-top: 3% !important;
+        margin-bottom: 2% !important;
+        align-items: center;
+    }
+    #teamSocial{
+        height: auto;
+        color: white;
+        vertical-align: middle;
+        margin-top: 1%;
+        margin-bottom: 4%;
+    }
+    #piCont{
+        height: 100%;
+        vertical-align: middle;
+        align-items: center;
+        margin: 2% 0 4% 0;
+    }
+    .container-3{
+        height: 300vh;
+    }
+    #buttonTeam{
+        margin-top: 0px;
+        text-align: center;
+    }
+
+    /*container 5*/
     .container-5 {
         height: 590vh;
     }
