--- a/src/components/About.css
+++ b/src/components/About.css
@@ -170,7 +170,7 @@ p{
 #teamSocial{
     margin: 7% 3% 0 3%;
     width: 2em;
-    color: white;
+    color: rgb(22, 25, 207);
 }
 #teaMember{
     /* width: 100%; */
