--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -4,7 +4,7 @@
 /*container 1 - header events */
 .container-header{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     margin: 0;
     padding: 0;
     align-items: center;
@@ -25,19 +25,18 @@ h3{
 }
 #evenText{
     width: 100% !important;
-    font-size: 1.7em;
+    /* font-size: 1.7em; */
     color: rgb(255, 255, 255) !important;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 #cinci{
     color: rgb(85, 136, 248);
-    font-size: 1.8em;
+    /* font-size: 1.8em; */
 }
 
 /* container 2 - events */
 #container-event{
     width: 100%;
-    height: 140vh;
     background-color: rgb(27, 33, 39);
     padding: 2em;
 }
@@ -79,17 +78,88 @@ td{
 
 /* Landscape tablets and medium desktops */
 @media (min-width: 992px) {
-
+    /*container 1 - header events */
+    .container-header{
+        height: 110vh;
+    }
+    h3 {
+        margin-top: 1em !important;
+    }
+    #evenText{
+        font-size: 1.7em;
+        font-weight: bold;
+    }
+    #cinci{
+        font-size: 1.8em;
+    }
+    /* container 2 - events */
+    .container-event{
+        height: 150vh;
+    }
 }
+
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 991px) {
-
+    /*container 1 - header events */
+    .container-header{
+        height: 100vh;
+    }
+    h3 {
+        margin-top: 1em !important;
+    }
+    #evenText{
+        font-size: 1.7em;
+        font-weight: bold;
+    }
+    #cinci{
+        font-size: 1.8em;
+    }
+    /* container 2 - events */
+    .container-event{
+        height: 150vh;
+    }
 }
 /* Landscape phones and portrait tablets */
 @media (min-width: 576px) and (max-width: 767px) {
-    
+    /*container 1 - header events */
+    .container-header{
+        height: 90vh;
+    }
+    h3 {
+        margin-top: 1em !important;
+        font-size: 3em !important;
+    }
+    #evenText{
+        font-size: 1.4em;
+        font-weight: bold;
+    }
+    #cinci{
+        font-size: 1.4em;
+    }
+    /* container 2 - events */
+    .container-event{
+        height: 150vh;
+    }
 }
 /* Extra small devices (phones, 575px and down) */
 @media (max-width: 575px) {
-
+    /*container 1 - header events */
+    .container-header{
+        height: 70vh;
+    }
+    h3 {
+        margin-top: 1em !important;
+        font-size: 2em !important;
+    }
+    #evenText{
+        font-size: 1em;
+        font-weight: bold;
+    }
+    #cinci{
+        font-size: 1.4em;
+    }
+    /* container 2 - events */
+    .container-event{
+        height: 150vh;
+    }
 }
