sigin form, home page blogs beautified

--- a/src/index.css
+++ b/src/index.css
@@ -157,6 +157,7 @@ label {
   background: transparent;
   transition: 1s;
   outline: none;
+  color: rgb(255, 255, 255) !important;
 }
 
 .login-btn {
@@ -288,4 +289,17 @@ padding: 0.4em 0.4em;
     font-weight: 700;
   font-size: 1.5rem;
   }
+}
+
+/*Attractions blogs*/
+#attractRow {
+  width: 100%;
+  margin: 0 !important;
+}
+#attractImage {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+h1:hover {
+  cursor: pointer;
 }
