--- a/src/index.css
+++ b/src/index.css
@@ -302,4 +302,16 @@ padding: 0.4em 0.4em;
 }
 h1:hover {
   cursor: pointer;
+  color: #127ce6;
+  text-shadow: 2px 2px;
+}
+
+/*Navbar - on hover & active tab*/
+.nav-link:hover {
+  transform: translateY(-2px);
+}
+.nav-link--active {
+  font-weight:bolder !important;
+  color: #29b6f6 !important;
+  transition: border-bottom .5s ease-in-out;
 }
